--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "NEXT_PRIVATE_LOCAL_WEBPACK=true next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@module-federation/nextjs-mf": "^8.4.0",
@@ -17,14 +18,24 @@
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3",
+    "ts-jest": "^29.2.3",
     "typescript": "^5"
   }
 }
